[package]
name = "zenoh-orbcomm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zenoh = { version = "1.1.0"}
flume = "0.10"
futures.workspace = true
clap.workspace = true
dotenv = "0.15.0"
colored = "2.2.0"
